# .xmonad

./: .gitignore  flake.nix  xmonad.state
nix/: overlay.nix
nix/xmonad-session/: default.nix
old/: default.nix  xmonad-x86_64-linux  xmonad.errors  xmonad.hs  xmonadrc.cabal
old/build-x86_64-linux/: Main.hi
old/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
xmobar/: CHANGELOG.md  default.nix  xmobar-app.cabal  xmobarrc
xmobar/app/: xmobar.hs
xmobar/lib/Xmobar/: Config.hs
xmonadrc/: xmonad.hs
